[gd_scene load_steps=4 format=3 uid="uid://cv8jshe47uytv"]

[ext_resource type="Script" path="res://code/pause.gd" id="1_7w060"]
[ext_resource type="FontFile" uid="uid://b0n86ptigjy55" path="res://art/yikes.ttf" id="2_n4pia"]

[sub_resource type="LabelSettings" id="LabelSettings_3r8k8"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7w060")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.5
offset_top = -120.5
offset_right = 111.5
offset_bottom = 120.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n4pia")
text = "CONTROLES:"
label_settings = SubResource("LabelSettings_3r8k8")
horizontal_alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n4pia")
text = "Movimiento: WASD"
label_settings = SubResource("LabelSettings_3r8k8")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n4pia")
text = "Saltar: Espacio"
label_settings = SubResource("LabelSettings_3r8k8")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n4pia")
text = "Empujar / Recoger Comida: E"
label_settings = SubResource("LabelSettings_3r8k8")
horizontal_alignment = 1

[node name="Label4" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n4pia")
text = "Colocar Comida: F"
label_settings = SubResource("LabelSettings_3r8k8")
horizontal_alignment = 1

[node name="Label9" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n4pia")
label_settings = SubResource("LabelSettings_3r8k8")
horizontal_alignment = 1

[node name="CheckButton" type="CheckButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_n4pia")
text = "PANTALLA COMPLETA "

[node name="Label8" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n4pia")
label_settings = SubResource("LabelSettings_3r8k8")
horizontal_alignment = 1

[node name="Label7" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n4pia")
text = "VOLUMEN DE LA MUSICA"
label_settings = SubResource("LabelSettings_3r8k8")
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="Label6" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n4pia")
label_settings = SubResource("LabelSettings_3r8k8")
horizontal_alignment = 1

[node name="back" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n4pia")
text = "Volver"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 456.0
offset_top = -172.0
offset_right = 695.0
offset_bottom = -132.0
grow_vertical = 0

[node name="menu" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n4pia")
text = "Volver al Menu"

[node name="Label8" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n4pia")
text = "       "
label_settings = SubResource("LabelSettings_3r8k8")

[node name="quit" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n4pia")
text = "Salir del juego"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="changed" from="PanelContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="HBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/quit" to="." method="_on_quit_pressed"]
